File: components/nexus-common/src/main/java/org/sonatype/nexus/common/entity/EntityBatchEvent.java